Submit button Safari bug FIXED

--- a/css/style.css
+++ b/css/style.css
@@ -584,6 +584,7 @@ input[type=submit], textarea {
   -ms-transition: all 0.005s ease-in-out;
   -o-transition: all 0.005s ease-in-out;
   outline: none;
+  vertical-align: bottom;
   -webkit-appearance: none;
 }
  
@@ -598,6 +599,7 @@ input[type=submit], textarea {
   padding-left: 5px;
   right: 5px;
   padding-right: 5px;
+  margin-bottom: 3px;
   color: whitesmoke;
   font-size: 14px;
   text-align: center;
